# Tessellum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
inbox/plans/: plan_cqrs_repo_layout.md  plan_promote_plans_to_first_class.md  plan_v01_src_tessellum_layout.md
plans/: README.md  plan_code_artifacts_port.md  plan_composer_dks_robustness.md  plan_composer_port.md  plan_cqrs_repo_layout.md  plan_dks_expansion.md  plan_dks_implementation.md  plan_meta_dks_validation_and_polish.md  plan_minimal_seed_vault.md  plan_retrieval_port.md  plan_v01_completion_roadmap.md  plan_v01_src_tessellum_layout.md
runs/: README.md
scripts/: README.md  curate_validation_observations.py  tessellum_session_mcp_server.py
src/tessellum/: __about__.py  __init__.py  capture.py  init.py
src/tessellum/bb/: __init__.py  graph.py  types.py
src/tessellum/cli/: __init__.py  bb.py  capture.py  composer.py  dks.py  filter.py  format_check.py  fz.py  index.py  init.py  main.py  mcp.py  search.py
src/tessellum/composer/: __init__.py  batch.py  compiler.py  contracts.py  dks.py  eval.py  executor.py  llm.py  loader.py  materializer.py  scheduler.py  session_mcp.py  skill_extractor.py
src/tessellum/data/: __init__.py  _seed_manifest.py
src/tessellum/dks/: __init__.py  confidence.py  core.py  dung.py  fsm.py  persistence.py  retrieval_client.py
src/tessellum/format/: __init__.py  building_blocks.py  frontmatter_spec.py  issue.py  link_checker.py  parser.py  validator.py
src/tessellum/indexer/: __init__.py  build.py  db.py  schema.sql
src/tessellum/mcp/: __init__.py  server.py
src/tessellum/retrieval/: __init__.py  bm25.py  dense.py  graph.py  hybrid.py  metadata.py  router.py
tests/cli/: test_bb_audit_cli.py  test_bb_migrate_cli.py  test_capture_cli.py  test_composer_batch_cli.py  test_composer_cli.py  test_composer_compile_cli.py  test_composer_eval_cli.py  test_composer_run_cli.py  test_dks_calibrate_cli.py  test_dks_cli.py  test_dks_meta_cli.py  test_dks_report_cli.py  test_filter_cli.py  test_format_check.py  test_fz_cli.py  test_index_cli.py  test_init_cli.py  test_search_cli.py
tests/smoke/: test_argument_perspective.py  test_bb_graph.py  test_bb_schema_at_version.py  test_bb_types.py  test_capture.py  test_composer_batch.py  test_composer_compiler.py  test_composer_contracts.py  test_composer_eval.py  test_composer_executor.py  test_composer_llm_anthropic.py  test_composer_loader.py  test_composer_materializer.py  test_composer_reliability.py  test_composer_retry.py  test_composer_scheduler.py  test_composer_skill_extractor.py  test_data_loader.py  test_dks_confidence.py  test_dks_core.py  test_dks_dung.py  test_dks_fsm.py  test_dks_meta.py  test_dks_meta_attacker.py  test_dks_meta_proposer.py  test_dks_multi_cycle.py  test_dks_n_perspective.py  test_dks_persistence.py  test_dks_phase7_cycle.py  test_dks_retrieval_client.py  test_dks_silent_failures.py  test_dks_skill.py  test_format_validator.py  test_indexer.py  test_init.py  test_link_checker.py  test_mcp_server.py  test_retrieval_bm25.py  test_retrieval_dense.py  test_retrieval_graph.py  (+4 more)
vault/0_entry_points/: acronym_glossary_cognitive_science.md  acronym_glossary_critical_thinking.md  acronym_glossary_llm.md  acronym_glossary_ml.md  acronym_glossary_network_science.md  acronym_glossary_statistics.md  acronym_glossary_systems.md  acronym_glossary_tessellum_foundations.md  entry_abuse_slipbox_argument_trail.md  entry_abuse_slipbox_research.md  entry_acronym_glossary.md  entry_architecture_trail.md  entry_building_block_index.md  entry_coes.md  entry_dialectic_trail.md  entry_effective_thinking_and_questioning.md  entry_folgezettel_trails.md  entry_master_toc.md  entry_retrieval_trail.md  entry_skill_catalog.md
vault/archives/experiments/: experiment_priority_graph_search_benchmark.md
vault/areas/code_repos/: repo_tessellum.md
vault/resources/analysis_thoughts/: analysis_building_block_vault_health.md  analysis_dks_novelty_assessment.md  analysis_metaharness_lens_on_abuse_slipbox.md  analysis_plugmem_lens_on_abuse_slipbox.md  counter_bb_ontology_misses_same_bb_deep_dive.md  counter_dense_retrieval_refutes_bb_strategy_routing.md  counter_two_systems_not_three_ontology_and_dks_are_one.md  counter_uniform_retrieval_supersedes_bb_prerouting.md  thought_atomicity_as_universal_scaling_principle.md  thought_atomicity_evaluation_abuse_slipbox.md  thought_bb_category_directory_mapping.md  thought_bb_demand_redirected_to_reranking.md  thought_bb_internal_transitions_evidence.md  thought_bb_ontology_as_typed_graph.md  thought_bb_structural_value_redirected_to_evaluation.md  thought_building_block_ontology_relationships.md  thought_cqrs_design_evolution.md  thought_cqrs_essence_for_tessellum.md  thought_cqrs_r_cross_gap_audit.md  thought_cqrs_r_cross_rules.md  thought_dks_as_fsm_on_bb_graph.md  thought_dks_design_synthesis.md  thought_dks_evolution.md  thought_dks_fz_integration.md  thought_dks_is_thinking_protocol_on_slipbox_kg.md  thought_dks_literature_review_and_contribution.md  thought_dks_runtime_integration.md  thought_dks_transition_model_adaptation.md  thought_epistemic_congruence_metric.md  thought_folgezettel_trails_as_retrieval_modality.md  thought_hub_dilution_bridges_topology_and_retrieval.md  thought_hybrid_retrieval_dense_plus_graph.md  thought_meta_dks_design.md  thought_meta_dks_validation_v053.md  thought_meta_question_value_of_typed_knowledge.md  thought_multi_bb_is_graph_traversal_not_congruence.md  thought_ontology_grounded_multi_hop_benchmark.md  thought_retrieval_evolution.md  thought_retrieval_synthesis.md  thought_slipbox_skills_vs_atomic_skills.md  (+8 more)
vault/resources/digest/: digest_7_habits_covey.md  digest_ai_engineering_huyen.md  digest_art_of_asking_fadem.md  digest_atomic_habits_clear.md  digest_atomicity_guide_sascha.md  digest_atomicity_principle_implementation_sascha.md  digest_atomicity_zettelkasten_christian.md  digest_basb_vs_zettelkasten_sascha.md  digest_beautiful_question_berger.md  digest_book_of_why_pearl.md  (+28 more)
(+610 files in other folders)
