[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessellum"
version = "0.0.33"
description = "Typed atomic notes in a graph — a Zettelkasten that scales. Knowledge construction with Building Blocks, Folgezettel trails, and the Dialectic Knowledge System (DKS)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tianpei (Luke) Xie" },
]
keywords = [
    "zettelkasten",
    "knowledge-management",
    "knowledge-graph",
    "atomic-notes",
    "building-block",
    "folgezettel",
    "dialectic",
    "dks",
    "cqrs",
    "epistemic",
    "agent-memory",
    "ai-agent",
    "llm",
    "mcp",
    "sqlite-vec",
    "fts5",
    "hybrid-retrieval",
    "rrf",
    "personal-knowledge-management",
    "pkm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # Storage + retrieval
    "sqlite-vec>=0.1.6",         # Vector extension for SQLite (one-file unified backend; provides FTS5 + vec0)
    "sentence-transformers",      # Dense retrieval embeddings (lazy-loaded by indexer + retrieval/dense)
    "networkx",                   # Graph traversal for best-first BFS over note_links
    # Format + I/O
    "PyYAML>=6.0,<7.0",           # YAML frontmatter + pipeline sidecars
    "jsonschema>=4.0",            # Pipeline schema validation
    "pydantic>=2.7,<3.0",         # Typed contracts for composer
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",                   # MCP stdio server SDK
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
agent = [
    "anthropic>=0.40",            # Composer LLM bridge (Wave 4)
]
papers = [
    "pyzotero",                   # Zotero save-paper integration
    "requests",
]
ingest = [
    "watchdog>=4.0",              # Inbox file-watcher
    "beautifulsoup4",             # HTML/EML
    "html2text",                  # HTML → Markdown
    "pdfplumber",                 # PDF extraction
    "PyPDF2",                     # PDF fallback
    "python-docx",                # Word documents
    "python-pptx",                # PowerPoint
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/TianpeiLuke/Tessellum"
Documentation = "https://github.com/TianpeiLuke/Tessellum/tree/main/docs"
Repository = "https://github.com/TianpeiLuke/Tessellum"
Issues = "https://github.com/TianpeiLuke/Tessellum/issues"
Changelog = "https://github.com/TianpeiLuke/Tessellum/blob/main/CHANGELOG.md"

[project.scripts]
tessellum = "tessellum.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tessellum"]

# Graft templates from the dogfooded vault into the wheel so `pip install
# tessellum` users get the canonical BB-type skeletons without cloning the
# repo. Source of truth stays in vault/resources/templates/; the wheel sees
# them at tessellum/data/templates/. tessellum.data.templates_dir() resolves
# either location depending on install mode (editable vs wheel).
[tool.hatch.build.targets.wheel.force-include]
"vault/resources/templates" = "src/tessellum/data/templates"
# 11 foundation term notes → the conceptual primer in the seed vault.
# tessellum init copies these into the scaffolded vault. All are scrubbed
# of internal references and pass format check with 0 errors.
"vault/resources/term_dictionary/term_knowledge_building_blocks.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_knowledge_building_blocks.md"
"vault/resources/term_dictionary/term_building_block.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_building_block.md"
"vault/resources/term_dictionary/term_epistemic_function.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_epistemic_function.md"
"vault/resources/term_dictionary/term_dialectic_knowledge_system.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_dialectic_knowledge_system.md"
"vault/resources/term_dictionary/term_cqrs.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_cqrs.md"
"vault/resources/term_dictionary/term_zettelkasten.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_zettelkasten.md"
"vault/resources/term_dictionary/term_para_method.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_para_method.md"
"vault/resources/term_dictionary/term_basb.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_basb.md"
"vault/resources/term_dictionary/term_code_method.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_code_method.md"
"vault/resources/term_dictionary/term_slipbox.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_slipbox.md"
"vault/resources/term_dictionary/term_folgezettel.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_folgezettel.md"
# Five universal acronym glossaries + master glossary index. entry_master_toc.md
# is intentionally NOT shipped — init generates a per-vault one inline.
"vault/0_entry_points/entry_acronym_glossary.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_acronym_glossary.md"
"vault/0_entry_points/acronym_glossary_tessellum_foundations.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_tessellum_foundations.md"
"vault/0_entry_points/entry_building_block_index.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_building_block_index.md"
"vault/resources/term_dictionary/term_format_spec.md" = "src/tessellum/data/seed_vault/resources/term_dictionary/term_format_spec.md"
"vault/resources/how_to/howto_first_vault.md" = "src/tessellum/data/seed_vault/resources/how_to/howto_first_vault.md"
# FZ trails: master map + per-trail entries + trail-node thought notes.
# Trail 1 (Architecture): 4 thoughts. Trail 2 (Dialectic / DKS): 2 thoughts.
# Trail 3 (Retrieval): 2 thoughts.
"vault/0_entry_points/entry_folgezettel_trails.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_folgezettel_trails.md"
"vault/0_entry_points/entry_architecture_trail.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_architecture_trail.md"
"vault/0_entry_points/entry_dialectic_trail.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_dialectic_trail.md"
"vault/0_entry_points/entry_retrieval_trail.md" = "src/tessellum/data/seed_vault/0_entry_points/entry_retrieval_trail.md"
"vault/resources/analysis_thoughts/thought_building_block_ontology_relationships.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_building_block_ontology_relationships.md"
"vault/resources/analysis_thoughts/thought_cqrs_design_evolution.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_cqrs_design_evolution.md"
"vault/resources/analysis_thoughts/thought_synthesis_two_systems_cqrs_value_proposition.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_synthesis_two_systems_cqrs_value_proposition.md"
"vault/resources/analysis_thoughts/thought_cqrs_essence_for_tessellum.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_cqrs_essence_for_tessellum.md"
"vault/resources/analysis_thoughts/thought_dks_evolution.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_dks_evolution.md"
"vault/resources/analysis_thoughts/thought_dks_design_synthesis.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_dks_design_synthesis.md"
"vault/resources/analysis_thoughts/thought_retrieval_evolution.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_retrieval_evolution.md"
"vault/resources/analysis_thoughts/thought_retrieval_synthesis.md" = "src/tessellum/data/seed_vault/resources/analysis_thoughts/thought_retrieval_synthesis.md"
"vault/0_entry_points/acronym_glossary_statistics.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_statistics.md"
"vault/0_entry_points/acronym_glossary_critical_thinking.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_critical_thinking.md"
"vault/0_entry_points/acronym_glossary_cognitive_science.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_cognitive_science.md"
"vault/0_entry_points/acronym_glossary_network_science.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_network_science.md"
"vault/0_entry_points/acronym_glossary_llm.md" = "src/tessellum/data/seed_vault/0_entry_points/acronym_glossary_llm.md"

[tool.hatch.build.targets.sdist]
# Tessellum dogfoods itself — there is no separate `docs/` directory; public
# documentation lives in `vault/` as typed atomic notes. See DEVELOPING.md.
include = [
    "src/tessellum",
    "vault",
    "plans",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "DEVELOPING.md",
    "pyproject.toml",
]
exclude = [
    "/data",
    "/experiments",
    "/inbox",
    "/runs",
    "/tests",
    "/notebook",
    "**/.gitkeep",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
