[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessellum"
version = "0.0.55"
description = "Typed atomic notes in a graph — a Zettelkasten that scales. Knowledge construction with Building Blocks, Folgezettel trails, and the Dialectic Knowledge System (DKS)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tianpei (Luke) Xie" },
]
keywords = [
    "zettelkasten",
    "knowledge-management",
    "knowledge-graph",
    "atomic-notes",
    "building-block",
    "folgezettel",
    "dialectic",
    "dks",
    "cqrs",
    "epistemic",
    "agent-memory",
    "ai-agent",
    "llm",
    "mcp",
    "sqlite-vec",
    "fts5",
    "hybrid-retrieval",
    "rrf",
    "personal-knowledge-management",
    "pkm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # Storage + retrieval
    "sqlite-vec>=0.1.6",         # Vector extension for SQLite (one-file unified backend; provides FTS5 + vec0)
    "sentence-transformers",      # Dense retrieval embeddings (lazy-loaded by indexer + retrieval/dense)
    "networkx",                   # Graph traversal for best-first BFS over note_links
    # Format + I/O
    "PyYAML>=6.0,<7.0",           # YAML frontmatter + pipeline sidecars
    "jsonschema>=4.0",            # Pipeline schema validation
    "pydantic>=2.7,<3.0",         # Typed contracts for composer
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",                   # MCP stdio server SDK
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
agent = [
    "anthropic>=0.40",            # Composer LLM bridge (Wave 4)
]
papers = [
    "pyzotero",                   # Zotero save-paper integration
    "requests",
]
ingest = [
    "watchdog>=4.0",              # Inbox file-watcher
    "beautifulsoup4",             # HTML/EML
    "html2text",                  # HTML → Markdown
    "pdfplumber",                 # PDF extraction
    "PyPDF2",                     # PDF fallback
    "python-docx",                # Word documents
    "python-pptx",                # PowerPoint
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/TianpeiLuke/Tessellum"
Documentation = "https://github.com/TianpeiLuke/Tessellum/tree/main/docs"
Repository = "https://github.com/TianpeiLuke/Tessellum"
Issues = "https://github.com/TianpeiLuke/Tessellum/issues"
Changelog = "https://github.com/TianpeiLuke/Tessellum/blob/main/CHANGELOG.md"

[project.scripts]
tessellum = "tessellum.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tessellum"]

# Graft templates from the dogfooded vault into the wheel so `pip install
# tessellum` users get the canonical BB-type skeletons without cloning the
# repo. Source of truth stays in vault/resources/templates/; the wheel sees
# them at tessellum/data/templates/. tessellum.data.templates_dir() resolves
# either location depending on install mode (editable vs wheel).
[tool.hatch.build.targets.wheel.force-include]
# Templates ship as a bulk directory copy — different shape from the
# per-file seed-vault grafts (which are registered dynamically by the
# build hook below). Keep this static entry.
"vault/resources/templates" = "src/tessellum/data/templates"

# Per-file seed-vault grafts are registered at build time by
# `hatch_build.py:SeedManifestHook` from the canonical
# `src/tessellum/data/_seed_manifest.py`. To add a seed file: append
# one line to SEED_VAULT_MANIFEST in that module — no pyproject edit
# needed.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Tessellum dogfoods itself — there is no separate `docs/` directory; public
# documentation lives in `vault/` as typed atomic notes. See DEVELOPING.md.
include = [
    "src/tessellum",
    "vault",
    "plans",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "DEVELOPING.md",
    "pyproject.toml",
]
exclude = [
    "/data",
    "/experiments",
    "/inbox",
    "/runs",
    "/tests",
    "/notebook",
    "**/.gitkeep",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
